--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0033FF">
+    android:background="@drawable/login_gradient">
 
     <TextView
         android:id="@+id/userInventoryText"
@@ -11,8 +11,11 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="@string/my_inventory_title"
-        android:textSize="24sp"
+        android:fontFamily="@font/kaushan"
+        android:textSize="30sp"
         android:textStyle="bold"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="25dp"
         android:textColor="#FFFFFF"/>
 
     <android.support.v7.widget.RecyclerView
@@ -34,19 +37,31 @@
             android:id="@+id/tradeSelectedItemButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:padding="5dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/button_background"
             android:text="@string/auction_Item" />
 
         <Button
             android:id="@+id/addInventoryItemButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:padding="5dp"
+            android:layout_marginEnd="10dp"
             android:layout_toEndOf="@id/tradeSelectedItemButton"
+            android:background="@drawable/button_background"
             android:text="@string/add_new_item_button_text" />
 
         <Button
             android:id="@+id/removeInventoryItemButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:padding="5dp"
+            android:background="@drawable/button_background"
             android:layout_toEndOf="@id/addInventoryItemButton"
             android:text="@string/remove_item_button_text" />
 
