--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,10 +5,21 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".LoginActivity"
-    android:gravity="center"
     android:padding="30dp"
     android:background="@drawable/login_gradient"
     >
+
+    <TextView
+        android:text="@string/pace_logo"
+        android:layout_width="match_parent"
+        android:textColor="#fff"
+        android:textSize="50sp"
+        android:gravity="center"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="100dp"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/kaushan"/>
+
 
     <EditText
         android:id="@+id/emailInput"
@@ -83,6 +94,7 @@
         android:textSize="20sp"
         android:textStyle="bold"
         android:fontFamily="@font/acme"
+        android:layout_gravity="center_horizontal"
         android:textColor="#fff"
         />
 
