--- a/app/src/main/res/layout/recycler_view.xml
+++ b/app/src/main/res/layout/recycler_view.xml
@@ -1,48 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:gravity="center"
-    android:background="#CCFFFF">
+    android:background="@drawable/login_gradient">
 
-    <ImageView
+    <android.support.v7.widget.CardView
+        android:layout_margin="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:cardElevation="10dp"
+        app:cardCornerRadius="5dp"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/itemImage"
-        android:layout_width="50sp"
-        android:layout_height="50sp"
-        android:layout_marginTop="5sp"
-        android:layout_marginBottom="5sp"
-        android:layout_marginLeft="2sp" />
+        android:layout_width="125dp"
+        android:layout_height="125dp"
+        android:layout_margin="15dp" />
 
-    <TextView
-        android:id="@+id/itemName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        android:layout_marginLeft="5sp"
-        android:textColor="#3399FF"/>
-
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/itemType"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="10sp"
-        android:layout_marginLeft="5sp"
-        android:textColor="#0099FF" />
+        android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/itemName"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:layout_width="match_parent"
+            android:textColor="#3F3D3D"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/itemTradeFor"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/itemType"
-        android:textSize="10sp"
-        android:layout_marginLeft="5sp"
-        android:textColor="#0099FF" />
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/itemType"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:layout_width="match_parent"
+            android:textColor="#5E5959"
+            android:layout_height="wrap_content" />
 
+        <TextView
+            android:id="@+id/itemTradeFor"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:layout_width="match_parent"
+            android:textColor="#5E5959"
+            android:layout_height="wrap_content" />
 
-</LinearLayout>
+    </LinearLayout>
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
+</RelativeLayout>
