--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -96,6 +96,16 @@
             android:textSize="20sp" />
 
     </RelativeLayout>
+    <com.github.ybq.android.spinkit.SpinKitView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/profile_image_upload_progress"
+        style="@style/SpinKitView.Large.Circle"
+        android:layout_centerHorizontal="true"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:visibility="gone"
+        android:layout_below="@id/userInfo"
+        app:SpinKit_Color="#673AB7" />
 
     <LinearLayout
         android:id="@+id/buttonLayout"
