--- a/app/src/main/res/layout/activity_user_registration.xml
+++ b/app/src/main/res/layout/activity_user_registration.xml
@@ -27,7 +27,6 @@
         android:layout_height="wrap_content"
         android:hint="@string/first_name"
         android:textSize="20sp"
-        android:inputType="textEmailAddress"
         android:textColorHint="#fff"
         android:textColor="#fff"
         android:fontFamily="@font/acme"
@@ -52,7 +51,6 @@
         android:layout_height="wrap_content"
         android:hint="@string/last_name"
         android:textSize="20sp"
-        android:inputType="textEmailAddress"
         android:textColorHint="#fff"
         android:textColor="#fff"
         android:fontFamily="@font/acme"
@@ -77,7 +75,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/grad_year"
         android:textSize="20sp"
-        android:inputType="textEmailAddress"
+        android:inputType="number"
         android:textColorHint="#fff"
         android:textColor="#fff"
         android:fontFamily="@font/acme"
@@ -127,7 +125,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/password"
         android:textSize="20sp"
-        android:inputType="textEmailAddress"
+        android:inputType="textPassword"
         android:textColorHint="#fff"
         android:textColor="#fff"
         android:fontFamily="@font/acme"
